# prompt

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build-mac-os-release.yml
assets/: prompt.vim
examples/: animal_house.pr  animal_house.rs  api_request.pr  table.pr
examples/api_request/: api_request.pr
examples/puppetmaster/: README.md  package-lock.json  package.json
examples/puppetmaster/automate/: automate.pr
examples/puppetmaster/summarize/: scrape.js  summarize.pr
examples/silly-terminal/: silly.pr
examples/silly_terminal/: silly.pr
examples/table/: table.pr
examples/table/sessions/: table
src/: ast.rs  chat.rs  completion.rs  config.rs  eval.rs  image.rs  lib.rs  main.rs  parser.rs  session.rs  voice.rs  watch.rs
src/cohere/: session.rs
src/eleven_labs/: voice.rs
src/openai/: chat.rs  error.rs  mod.rs  response.rs  session.rs
