[package]
name = "prompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ai = { path = "../ai" }
peg = "0.8.1"
regex = "1.7.1"
serde = { version = "1.0.156", features = ["derive"] }
serde_yaml = "0.9.19"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.26.0", features = ["rt", "macros"] }
