[package]
name = "ai-cli"
version = "0.2.0"
edition = "2021"
description = "A CLI tool for all things AI (generating images or audio, chatting with LLM's, you name it)"
license = "MIT"
repository = "https://github.com/PromptProgrammingLanguage/ai"

[lib]
name = "ai"
path = "src/lib.rs"

[[bin]]
name = "ai"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.0"
clap = { version = "4.1.4", features = ["derive"] }
dirs = "4.0.0"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
rustc-serialize = "0.3.24"
rustyline = "10.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
derive_more = { version = "0.99.17", features = ["from","try_into"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
serde_yaml = "0.9.17"
async-recursion = "1.0.2"
reqwest-eventsource = "0.4.0"
futures-util = "0.3.26"
tiktoken-rs = "0.3.3"
log = "0.4.17"
